# PCL_Example

./: .gitattributes  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  base.Dockerfile
filters/StatisticalOutlierRemoval/: CMakeLists.txt  main.cpp
include/: write_pcd_file.h
segmentation/MinCutSegmentation/: CMakeLists.txt  main.cpp
src/: main.cpp  write_pcd_file.cpp
